--- a/index.html
+++ b/index.html
@@ -5,6 +5,46 @@
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
+    <div class="header">
+    <h1> Broadway Design </h1>
+      <p><a href=".header">Home</a></p>
+      <p><a href=".process">Process</a></p>
+      <p><a href="#work">Work</a></p>
+      <p><a href="#team">Team</a></p>
+      <p><a href="#contact">Contact</a></p>
+    </div>
+    <div class="process">
+      <h2>Our Process</h2>
+        <img src=""/>
+        <h3>Identify</h3>
+        <p>text</p>
+
+        <img src=""/>
+        <h3>Understand</h3>
+        <p>text</p>
+
+        <img src=""/>
+        <h3>Execute</h3>
+        <p>text</p>
+      </div>
+
+      <h3 id="tagline">Designed in New York</h3>
+      <h3 id="work">Portfolio</h3>
+        <p>Coming Soon</p>
+      <h3 id="team">Team</h3>
+        <p>We're Hiring!</p>
+      <h3 id="contact">Contact</h3>
+        <p>Phone: (555)-555-5555
+        <br />E-mail: test@example.com
+        <br />Twitter: @test </p>
+
+      <div class="footer">
+        <p>© Broadway 2017
+          <a href=".header">Home</a>
+          <a href=".process">About</a>
+          <a href="#work">Work</a>
+          <a href="#team">Team</a>
+          <a href="#contact">Contact</a></p>
 
   </body>
 </html>
