--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
     </div>
     <div class="process">
       <h2>Our Process</h2>
-        <img src=""/>
+        <img src="./resources/images/identify.svg"/>
         <h3>Identify</h3>
-        <p>text</p>
+        <p>We focus on the most important details.</p>
 
-        <img src=""/>
+        <img src="./resources/images/understand.svg"/>
         <h3>Understand</h3>
-        <p>text</p>
+        <p>We study our projects inside and out.</p>
 
-        <img src=""/>
+        <img src="./resources/images/execute.svg"/>
         <h3>Execute</h3>
-        <p>text</p>
+        <p>We put everything we have into our work.</p>
       </div>
 
       <h3 id="tagline">Designed in New York</h3>
