--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
         <br />E-mail: test@example.com
         <br />Twitter: @test </p>
 
-      <div class="footer">
-        <p>© Broadway 2017
+        <p class="footer">© Broadway 2017
           <a href=".header">Home</a>
           <a href=".process">About</a>
           <a href="#work">Work</a>
